<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Main3Activity">
    <include layout="@layout/toolbar"/>

    <androidx.core.widget.NestedScrollView
        style="@style/NestedScrollBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true">


    <com.example.myapplication.customviews.ZitounaTextView
        android:id="@+id/text_email"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/background"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="16dp"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/choix_1"/>


    <com.ab.radiogroupes.RadioGroupErrorSupport
        android:id="@+id/radio_group_1"
        android:layout_below="@id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/RadioGroup"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <RadioButton
            android:id="@+id/grande_branche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_3"
            android:buttonTint="@color/color_end"
            />
        <RadioButton
            android:id="@+id/Takaful_tamouil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_4"
            android:buttonTint="@color/color_end"
            />
        <RadioButton
            android:id="@+id/directeur_vie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_5"
            android:buttonTint="@color/color_end"
            />
        <RadioButton
            android:id="@+id/directeur_technique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choice_6"
            android:buttonTint="@color/color_end"
            />

    </com.ab.radiogroupes.RadioGroupErrorSupport>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Objet"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/aa1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="110dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="Contenu" />
    </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>




    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_envoyer"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        app:icon="@drawable/ic_menu_send"
        android:text="Envoyer"/>


</LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
