<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Main4Activity">

    <include layout="@layout/toolbar"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">
            <com.example.myapplication.customviews.ZitounaTextView
                android:id="@+id/text_main4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/cardview_dark_background"
                android:text="Nous contacter par téléphone"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.myapplication.customviews.ZitounaTextView
                android:id="@+id/text_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:text="Choisir le service"
                android:textColor="@color/background"
                android:textSize="16dp" />


            <RadioGroup
                android:id="@+id/radio_group_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_phone"
                android:background="@color/color3"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/grande_branche_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice_3" />

                <RadioButton
                    android:id="@+id/Takaful_tamouil_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice_4" />

                <RadioButton
                    android:id="@+id/directeur_vie_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice_5" />

                <RadioButton
                    android:id="@+id/directeur_technique_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice_6" />

                <RadioButton
                    android:id="@+id/GRC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice_7" />

            </RadioGroup>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_appeler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onDialCall"
                android:text="Appeler" />


            <com.example.myapplication.customviews.ZitounaTextView
                android:id="@+id/text_main4_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/cardview_dark_background"
                android:text="Nous contacter par sms"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <com.example.myapplication.customviews.ZitounaTextView
                android:id="@+id/text_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:text="Choisir le responsable"
                android:textColor="@color/background"
                android:textSize="16dp" />



            <RadioGroup
                android:id="@+id/radio_group_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_phone"
                android:background="@color/color3"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/directeur_technique_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Directeur technique" />

                <RadioButton
                    android:id="@+id/directeur_vie_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Directeur vie" />

                <RadioButton
                    android:id="@+id/grande_branche_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Grande Branche" />

                <RadioButton
                    android:id="@+id/service_apres_vente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Service après vente" />

                <RadioButton
                    android:id="@+id/Takaful_tamouil_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Takaful tamouil" />

                <RadioButton
                    android:id="@+id/Banque_takaful"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Banque takaful" />


            </RadioGroup>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sms"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:hint="Contenu"
                    android:inputType="textShortMessage|textMultiLine|textCapSentences" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="onDialCall"
                android:text="Envoyer" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>